// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dartboard Address 1`] = `
<div
  className="dartboard"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input1"
    >
      Street Address
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input1"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input2"
    >
      Zip or City
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input2"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <button
      aria-label={null}
      className="btn btn-outline-dark"
      onClick={[Function]}
      type="button"
    >
      Find
    </button>
    <small
      className="dart-board__help-block form-text text-danger"
    >
      No match found
    </small>
  </div>
</div>
`;

exports[`Storyshots Dartboard Inline 1`] = `
<div
  className="dartboard form-inline"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input1"
    >
      Street Address
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input1"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input2"
    >
      Zip or City
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input2"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <button
      aria-label={null}
      className="btn btn-outline-dark"
      onClick={[Function]}
      type="button"
    >
      Find
    </button>
    <small
      className="dart-board__help-block form-text text-danger"
    >
      No match found
    </small>
  </div>
</div>
`;

exports[`Storyshots Dartboard Milepost 1`] = `
<div
  className="dartboard"
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input1"
    >
      Route
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input1"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor="input2"
    >
      Milepost
    </label>
    <input
      autoComplete="nope"
      className="form-control"
      name="input2"
      onChange={[Function]}
      onKeyPress={[Function]}
      type="text"
      value=""
    />
    <small
      className="dart-board__help-block form-text text-danger"
    >
      This field is required
    </small>
  </div>
  <div
    className="form-group"
  >
    <button
      aria-label={null}
      className="btn btn-outline-dark"
      onClick={[Function]}
      type="button"
    >
      Find
    </button>
    <small
      className="dart-board__help-block form-text text-danger"
    >
      No match found
    </small>
  </div>
</div>
`;

exports[`Storyshots LayerSelector Basic 1`] = `null`;

exports[`Storyshots LayerSelector Without Expandable Container 1`] = `null`;

exports[`Storyshots LayerSelector/Container Closed 1`] = `
<div
  area-haspopup="true"
  className="layer-selector"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <input
    alt="layers"
    className="layer-selector__toggle"
    src="test-file-stub"
    type="image"
  />
  <form
    className="layer-selector--hidden"
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "height": "200px",
          "width": "200px",
        }
      }
    >
      peek-a-boo
    </div>
  </form>
</div>
`;

exports[`Storyshots LayerSelector/Container Open 1`] = `
<div
  area-haspopup="true"
  className="layer-selector"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <input
    alt="layers"
    className="layer-selector__toggle layer-selector--hidden"
    src="test-file-stub"
    type="image"
  />
  <form
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "height": "200px",
          "width": "200px",
        }
      }
    >
      peek-a-boo
    </div>
  </form>
</div>
`;

exports[`Storyshots LayerSelector/Item Checked Base Layer 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={true}
      className="layer-selector-item-input"
      name="baselayer"
      onChange={[Function]}
      type="radio"
      value="Base Layer"
    />
    Base Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Checked Overlay 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={true}
      className="layer-selector-item-input"
      name="overlay"
      onChange={[Function]}
      type="checkbox"
      value="Overlay Layer"
    />
    Overlay Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Default Base Layer 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={false}
      className="layer-selector-item-input"
      name="baselayer"
      onChange={[Function]}
      type="radio"
      value="Base Layer"
    />
    Base Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Default Overlay 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={false}
      className="layer-selector-item-input"
      name="overlay"
      onChange={[Function]}
      type="checkbox"
      value="Overlay Layer"
    />
    Overlay Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/WithMap Custom LOD 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Land Ownership 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Linked Overlays 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap No Zoom Or Scale 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Scale 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Zoom 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Zoom And Scale 1`] = `null`;

exports[`Storyshots Sherlock/InMap Address Points 1`] = `null`;

exports[`Storyshots Sherlock/InMap Cities 1`] = `null`;
